--- a/app/views/psd-revised-flow/case-trading-stds-landing-summary-added.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-summary-added.html
@@ -135,19 +135,6 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Notifying country
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    <!--i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i-->
-                </dd>
-                <!--dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Change<span class="govuk-visually-hidden"> the notifying country</span>
-                    </a>
-                </dd-->               
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
                     Created by
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -275,10 +262,10 @@
                 </dd>
             </div>
         </dl>
-        <span class="govuk-!-font-size-16">
-        <h3 id="product-info-1" class="govuk-heading-m govuk-!-margin-top-9">
-            
-        </h3>
+        
+            <h3 id="product-info-1" class="govuk-heading-m govuk-!-margin-top-9">
+                Case specific product information
+            </h3>
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">Asda washing up liquid</h4>
 
