--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -133,7 +133,7 @@
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
-                        'Reference' can be blank. Reference number can now be edited (don't know why users currently can't?). 'Notifying country' can be blank - if this is because of EU exit we do not need this row? 'Case risk level' link is 'Set' when not, set but changes to 'Change' once set.
+                        'Reference' can be blank. 'Case risk level' link is 'Set' when not, set but changes to 'Change' once set.
                     </li>
                     <li>
                         Case pages - Summary field no longer prepopulated with 'reported as' text statement. (New designs are compatible with old cases).[<i><abbr>OPSS</abbr> users still: "what is being alleged", continues to show here on current service</i>]
@@ -158,6 +158,9 @@
                                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-updated.html" target="_blank">Success - Case information updated</a>
                                 <br><span class="govuk-!-font-size-16">This simply maintains the current functionality with a generic confirmation statement</span>.
                             </li>
+                            <li>
+                                The 'Notifying country' row, should only be inserted and included for <abbr>OPSS</abbr> users. (If there is no value we include the row but with a blank value).
+                            </li>                            
                             
                         </ul>
                     </li>
@@ -349,7 +352,7 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing.html" target="_blank">
                     Case page - OPSS
                 </a>
-                <br><span class="govuk-!-font-size-16">Allergation - with contact info</span>.
+                <br><span class="govuk-!-font-size-16">Allergation - with contact info. (The 'Notifying country' row, is inserted and included for <abbr>OPSS</abbr> users)</span>.
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing-team-not-added-to-case.html" target="_blank">
@@ -395,7 +398,10 @@
             <li>
                 <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/products-2-products-safe" target="_blank">Case - products page - safe</a>
                 <br><span class="govuk-!-font-size-16">Example showing that this case has defined the included product record as safe and compliant</span>.
-            </li>                        
+            </li>  
+            <li>
+                Note: during this work we will also need to add a 'Create a product record' link to the 3x Products pages (Your, Team, Search).
+            </li>                       
         </ol>
 
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
