--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -206,7 +206,7 @@
             </ul>
         </section>
 
-        <section id="corrective" class="govuk-!-margin-bottom-9">
+        <section id="corrective" class="govuk-!-margin-bottom-9 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-4 govuk-!-padding-bottom-2 govuk-!-padding-left-4">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -337,7 +337,7 @@
             </ul>
         </section>
 
-        <section id="Correspondence" class="govuk-!-margin-bottom-9">
+        <section id="Correspondence" class="govuk-!-margin-bottom-9 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-4 govuk-!-padding-bottom-2 govuk-!-padding-left-4">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -493,7 +493,7 @@
 
         </section>    
         
-        <section id="other" class="govuk-!-margin-bottom-9">
+        <section id="other" class="govuk-!-margin-bottom-9 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-4 govuk-!-padding-bottom-2 govuk-!-padding-left-4">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
