--- a/app/views/psd-revised-flow/add-a-product.html
+++ b/app/views/psd-revised-flow/add-a-product.html
@@ -41,7 +41,7 @@
                 </summary>
                 <div class="govuk-details__text">
                     <p class="govuk-body-s">
-                        Use the <a href="/products/your-products" class="govuk-link govuk-link--no-visited-state">Products area</a> to find a product and its product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> Using an existing <abbr>PSD</abbr> product record to add to your case avoids the need to create a new one and highlights other cases investigating the same product.
+                        Use the <a href="/products/your-products" class="govuk-link govuk-link--no-visited-state">Products area</a> to find a product and its product record reference number. For example, <abbr>psd</abbr>-301. Using an existing <abbr>PSD</abbr> product record to add to your case avoids the need to create a new one and highlights other cases investigating the same product.
                     </p>
                     <p class="govuk-body-s">
                         After checking that the product does not already exist within the <abbr>PSD</abbr> product records, you can create a new product record (using the links provided in the Products area pages) and then use its <abbr>PSD</abbr> reference number to add it to your case.
