--- a/app/views/psd-revised-flow/case-trading-stds-landing.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing.html
@@ -132,19 +132,19 @@
                 <dt class="govuk-summary-list__key">Created</dt>
                 <dd class="govuk-summary-list__value">13 December 2021</dd>
             </div>
-            <div class="govuk-summary-list__row">
+            <!--div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Notifying country
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <!--i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i-->
+                    
                 </dd>
-                <!--dd class="govuk-summary-list__actions">
+                <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Change<span class="govuk-visually-hidden"> the notifying country</span>
                     </a>
-                </dd-->               
-            </div>
+                </dd>               
+            </div-->
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Created by
