--- a/app/views/psd-revised-flow/inc_top_nav_2.html
+++ b/app/views/psd-revised-flow/inc_top_nav_2.html
@@ -1,6 +1,6 @@
     <section class="govuk-grid-column-full govuk-!-padding-top-3 govuk-!-padding-bottom-1 opss-desktop-padding-top-3 opss-desktop-padding-bottom-4 govuk-!-padding-right-3 govuk-!-padding-left-3 opss-border-all opss-grey-bg opss-3-col-flow opss-responsive-margin-bottom-6">
 
-        <dl role="menu" class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
+        <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Product&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(2<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
