--- a/app/views/psd-revised-flow/inc_products_pg_cases.html
+++ b/app/views/psd-revised-flow/inc_products_pg_cases.html
@@ -1,4 +1,18 @@
-                <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--sm-font">
+                <style>
+                    .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dt {
+                        width: 35%; 
+                    }
+                    .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd, 
+                    .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd + dd {
+                            width: 25%;
+                    }
+                    .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd:last-of-type {
+                        width: 15%;
+                    }
+                </style>
+                
+                
+                <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--sm-font opss-summary-list-mixed--4-cols">
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         <a class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-regular" href="/psd-revised-flow/case-trading-stds-landing">
@@ -8,6 +22,9 @@
                     <dd class="govuk-summary-list__value">
                         2101-0008
                     </dd>
+                    <dd class="govuk-summary-list__value">
+                        Sunderland Council
+                    </dd>                    
                     <dd class="govuk-summary-list__actions">
                         <span class="opss-tag opss-tag--risk3">Case closed</span>
                     </dd>
@@ -15,12 +32,15 @@
                     <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         <a class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-regular" href="/psd-revised-flow/case-trading-stds-landing">
-                            Puttasous vetti cordoriu &hellip;
+                            Puttasous vetti cordoriu aldjkf lfj lsdfj lsfjfldkj
                         </a>
                     </dt>
                     <dd class="govuk-summary-list__value">
                         6449-2311
                     </dd>
+                    <dd class="govuk-summary-list__value">
+                        Wawrickshire County Council Trading standards office
+                    </dd>                     
                     <dd class="govuk-summary-list__actions">
                         <span class="opss-tag opss-tag--plain">Case open</span>
                     </dd>
