--- a/app/views/psd-revised-flow/supporting-information-empty.html
+++ b/app/views/psd-revised-flow/supporting-information-empty.html
@@ -106,7 +106,7 @@
         
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The supporting information for this case</h2>
 
-        <section id="accidents" class="govuk-!-margin-bottom-9">
+        <section id="accidents" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -124,7 +124,7 @@
 
         </section>
 
-        <section id="corrective" class="govuk-!-margin-bottom-9">
+        <section id="corrective" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -139,10 +139,9 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
-        <section id="assessment" class="govuk-!-margin-bottom-9">
+        <section id="assessment" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -156,11 +155,10 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            
+            </div>            
         </section>
 
-        <section id="Correspondence" class="govuk-!-margin-bottom-9">
+        <section id="correspondence" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -175,11 +173,9 @@
                     </div>
                 </div>
             </div>
-            
         </section>
 
-
-        <section id="testresult" class="govuk-!-margin-bottom-9">
+        <section id="testresult" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -194,10 +190,9 @@
                     </div>
                 </div>
             </div>
-
         </section>    
         
-        <section id="other" class="govuk-!-margin-bottom-9">
+        <section id="other" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -212,7 +207,6 @@
                     </div>
                 </div>
             </div>
-            
         </section>            
 
     </section>
