--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -106,7 +106,7 @@
         
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The supporting information for this case</h2>
 
-        <section id="accidents" class="govuk-!-margin-bottom-9">
+        <section id="accidents" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4" data-info-number="2">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -206,7 +206,7 @@
             </ul>
         </section>
 
-        <section id="corrective" class="govuk-!-margin-bottom-9 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-4 govuk-!-padding-bottom-2 govuk-!-padding-left-4">
+        <section id="corrective" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="1">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -257,7 +257,7 @@
 
         </section>
 
-        <section id="assessment" class="govuk-!-margin-bottom-9">
+        <section id="assessment" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4" data-info-number="2">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -337,7 +337,7 @@
             </ul>
         </section>
 
-        <section id="Correspondence" class="govuk-!-margin-bottom-9 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-4 govuk-!-padding-bottom-2 govuk-!-padding-left-4">
+        <section id="correspondence" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="2">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -433,8 +433,7 @@
             </ul>
         </section>
 
-
-        <section id="testresult" class="govuk-!-margin-bottom-9">
+        <section id="testresult" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4" data-info-number="1">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -493,7 +492,7 @@
 
         </section>    
         
-        <section id="other" class="govuk-!-margin-bottom-9 opss-border-all govuk-!-padding-top-4 govuk-!-padding-right-4 govuk-!-padding-bottom-2 govuk-!-padding-left-4">
+        <section id="other" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="2">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
