create a product pages

--- a/app/views/psd-revised-flow/is-this-the-product.html
+++ b/app/views/psd-revised-flow/is-this-the-product.html
@@ -50,7 +50,7 @@
                                     <dt class="govuk-summary-list__key">Name </dt>
                                     <dd class="govuk-summary-list__value">Window and glass cleaner</dd>
                                 </div>
-                                <div class="govuk-summary-list__row">
+                                <!--div class="govuk-summary-list__row">
                                     <dt class="govuk-summary-list__key">Model </dt>
                                     <dd class="govuk-summary-list__value"></dd>
                                 </div>
@@ -65,25 +65,25 @@
                                 <div class="govuk-summary-list__row">
                                     <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">№</span> </dt>
                                     <dd class="govuk-summary-list__value"></dd>
-                                </div>
+                                </div-->
                                 <div class="govuk-summary-list__row">
                                     <dt class="govuk-summary-list__key">Barcode </dt>
                                     <dd id="barNumber" class="govuk-summary-list__value">664996-7676323</dd>
                                 </div>
-                                <div class="govuk-summary-list__row">
+                                <!--div class="govuk-summary-list__row">
                                     <dt class="govuk-summary-list__key">Identifier(s) </dt>
                                     <dd class="govuk-summary-list__value"></dd>
-                                </div>
+                                </div-->
                             </dl>
 
-                            <details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
+                            <!--details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
                                 <summary class="govuk-details__summary">
                                     <span class="govuk-details__summary-text">
                                         Product description
                                     </span>
                                 </summary>
                                 <div class="govuk-details__text">Pump action 300ml bottle with clear liquid used for spraying onto domestic windows and glass for cleaning.</div>
-                            </details>
+                            </details-->
 
                             <details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
                                 <summary class="govuk-details__summary">
@@ -94,9 +94,9 @@
                                 <div class="govuk-details__text"><img src="../public/images/asda-window-cleaner.png" class="opss-details-img" alt="Asda window cleaner"></div>
                             </details>
 
-                            <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
+                            <!--p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                                 This product record currently has no owner. Your team will become the owner<span class="govuk-visually-hidden">.</span>
-                            </p>
+                            </p-->
 
                         </div>  
                     </section>
