--- a/app/views/psd-revised-flow/supporting-information-empty.html
+++ b/app/views/psd-revised-flow/supporting-information-empty.html
@@ -89,11 +89,11 @@
                             Test results <span>(0)</span>
                         </a>
                     </li>
-                    <li>
+                    <!--li>
                         <a href="/psd-revised-flow/supporting-information.html#other" class="govuk-link govuk-link--no-visited-state">
                             Other <span>(0)</span>
                         </a>
-                    </li>
+                    </li-->
                 </ul>
             </li>
             <li>
@@ -192,7 +192,7 @@
             </div>
         </section>    
         
-        <section id="other" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="0">
+        <!--section id="other" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -207,7 +207,7 @@
                     </div>
                 </div>
             </div>
-        </section>            
+        </section-->            
 
     </section>
 
