--- a/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient.html
+++ b/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient.html
@@ -70,7 +70,7 @@
                       <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the exact concentration?</label>
                       <div class="govuk-input__wrapper">
                         <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text" maxlength="3">
-                        <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">% w/w</span></div>
+                        <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
                       </div>
 
                     </div>
