--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -89,11 +89,11 @@
                             Test results <span>(1)</span>
                         </a>
                     </li>
-                    <li>
+                    <!--li>
                         <a href="/psd-revised-flow/supporting-information.html#other" class="govuk-link govuk-link--no-visited-state">
                             Other <span>(2)</span>
                         </a>
-                    </li>
+                    </li-->
                 </ul>
             </li>
             <li>
@@ -492,7 +492,7 @@
 
         </section>    
         
-        <section id="other" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="2">
+        <!--section id="other" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="2">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -587,7 +587,7 @@
                 </li>                
             </ul>
 
-        </section>            
+        </section-->            
 
     </section>
 
