--- a/app/views/psd-revised-flow/case-trading-stds-landing-case-specific-x2.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-case-specific-x2.html
@@ -193,7 +193,9 @@
                 <dt class="govuk-summary-list__key">Case risk level</dt>
                 <dd class="govuk-summary-list__value">
                     <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
-                        <span class="govuk-visually-hidden">This case is a</span>Serious risk
+
+                        Serious risk
+
                     </span>
 
                     <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
