--- a/app/views/psd-revised-flow/case-trading-stds-landing-restricted.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-restricted.html
@@ -102,11 +102,12 @@
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+                                        
+                    <!-- opss user: what is being alleged, shows here on current service -->
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the summary</span>
+                            <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the summary</span>                                
                     </a>
                 </dd>
             </div>            
@@ -131,6 +132,19 @@
                 <dt class="govuk-summary-list__key">Created</dt>
                 <dd class="govuk-summary-list__value">13 December 2021</dd>
             </div>
+            <!--div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Notifying country
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">
+                        Change<span class="govuk-visually-hidden"> the notifying country</span>
+                    </a>
+                </dd>               
+            </div-->
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Created by
@@ -177,10 +191,9 @@
                     Case restriction
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Unrestricted
-                    <!-- OR
-                    <span class="opss-tag opss-tag--risk2 opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>Restricted
-                    -->
+                    
+                    <span class="opss-tag opss-tag--risk2 opss-tag--lrg">Restricted</span>
+                    
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -192,9 +205,7 @@
                 <dt class="govuk-summary-list__key">Case risk level</dt>
                 <dd class="govuk-summary-list__value">
                     <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
-
                         Serious risk
-
                     </span>
 
                     <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
@@ -211,7 +222,7 @@
                 <dt class="govuk-summary-list__key">Risk level validated</dt>
                 <dd class="govuk-summary-list__value">No</dd>
             </div-->
-            <div class="govuk-summary-list__row">
+            <!--div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     COVID-19
                 </dt>
@@ -223,7 +234,7 @@
                         Change<span class="govuk-visually-hidden"> the coronavirus status</span>
                     </a>
                 </dd>
-            </div>
+            </div-->
         </dl>
 
         <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-6 opss-float-left">
@@ -232,7 +243,7 @@
         
         <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
-        </a>
+        </a>                              
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
@@ -252,7 +263,7 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                                <dt class="govuk-summary-list__key">
+                <dt class="govuk-summary-list__key">
                     Hazard description
                 </dt>
                 <dd class="govuk-summary-list__value">
