--- a/app/views/psd-revised-flow/case-opss-landing-team-added-to-case.html
+++ b/app/views/psd-revised-flow/case-opss-landing-team-added-to-case.html
@@ -171,7 +171,7 @@
                     COVID-19
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <span class="opss-tag opss-tag--covid opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>COVID-19 related</span>
+                    <span class="opss-tag opss-tag--covid opss-tag--lrg">COVID-19 related</span>
                 </dd>
             </div>
         </dl>
