--- a/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
@@ -163,7 +163,9 @@
                 <dt class="govuk-summary-list__key">Case risk level</dt>
                 <dd class="govuk-summary-list__value">
                     <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
-                        <span class="govuk-visually-hidden">This case is a</span>Serious risk
+
+                        Serious risk
+
                     </span>
 
                     <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
@@ -180,7 +182,7 @@
                     COVID-19
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <span class="opss-tag opss-tag--covid opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>COVID-19 related</span>
+                    <span class="opss-tag opss-tag--covid opss-tag--lrg">COVID-19 related</span>
                 </dd>
             </div>
         </dl>
