--- a/app/views/psd-revised-flow/case-trading-stds-landing-summary-added.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-summary-added.html
@@ -194,7 +194,9 @@
                 <dt class="govuk-summary-list__key">Case risk level</dt>
                 <dd class="govuk-summary-list__value">
                     <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
-                        <span class="govuk-visually-hidden">This case is a</span>Serious risk
+
+                        Serious risk
+
                     </span>
 
                     <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
@@ -216,7 +218,7 @@
                     COVID-19
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    <span class="opss-tag opss-tag--covid opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>COVID-19 related</span>
+                    <span class="opss-tag opss-tag--covid opss-tag--lrg">COVID-19 related</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
