--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -250,7 +250,7 @@
                 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
-                        We add a "<a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/all-products">Create a product record</a>" link to <u>all three</u> Products pages (Your, Team, All). 
+                        We add a "<a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/all-products" target="_blank">Create a product record</a>" link to <u>all three</u> Products pages (Your, Team, All). 
                     </li>
                     <li>
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/create-a-product-record-edit.html" target="_blank">Edit a product record</a> - updated version of the current form page.
