--- a/app/views/psd-revised-flow/is-this-the-product-counterfeit.html
+++ b/app/views/psd-revised-flow/is-this-the-product-counterfeit.html
@@ -28,8 +28,8 @@
                 </legend>
 
                 <div class="govuk-grid-row">
-                    <section class="govuk-grid-column-two-thirds opss-panels">
-                        <div class="govuk-grid-column-one-half-from-desktop opss-panels__single">
+                    <section class="govuk-grid-column-three-quarters opss-panels">
+                        <div class="opss-panels__single">
 
                             <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Asda window and glass cleaner</h2>
 
@@ -74,6 +74,12 @@
                                     <dt class="govuk-summary-list__key">Identifier(s) </dt>
                                     <dd class="govuk-summary-list__value"></dd>
                                 </div-->
+                                <div class="govuk-summary-list__row">
+                                    <dt class="govuk-summary-list__key">Counterfeit </dt>
+                                    <dd class="govuk-summary-list__value">
+                                        <span class="opss-tag opss-tag--risk2 opss-tag--lrg">Yes</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">This is a product record for a counterfeit product</span>
+                                    </dd>
+                                </div>  
                             </dl>
 
                             <!--details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
@@ -94,7 +100,9 @@
                                 <div class="govuk-details__text"><img src="../public/images/asda-window-cleaner.png" class="opss-details-img" alt="Asda window cleaner"></div>
                             </details>
 
-                            <!-- no owned by statement -->
+                            <!--p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
+                                This product record currently has no owner. Your team will become the owner<span class="govuk-visually-hidden">.</span>
+                            </p-->
 
                         </div>  
                     </section>
