--- a/app/views/psd-revised-flow/is-this-the-product.html
+++ b/app/views/psd-revised-flow/is-this-the-product.html
@@ -28,8 +28,8 @@
                 </legend>
 
                 <div class="govuk-grid-row">
-                    <section class="govuk-grid-column-two-thirds opss-panels">
-                        <div class="govuk-grid-column-one-half-from-desktop opss-panels__single">
+                    <section class="govuk-grid-column-three-quarters opss-panels">
+                        <div class="opss-panels__single">
 
                             <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Asda window and glass cleaner</h2>
 
@@ -74,6 +74,12 @@
                                     <dt class="govuk-summary-list__key">Identifier(s) </dt>
                                     <dd class="govuk-summary-list__value"></dd>
                                 </div-->
+                                <div class="govuk-summary-list__row">
+                                    <dt class="govuk-summary-list__key">Counterfeit </dt>
+                                    <dd class="govuk-summary-list__value">
+                                        No <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">This product record is about a genuine product</span>
+                                    </dd>
+                                </div>                                  
                             </dl>
 
                             <!--details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
