--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -369,6 +369,10 @@
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li class="govuk-!-font-size-16">
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/supporting-information-other.html" target="_blank">Case page - Supporting information with Other info</a> - shows the page/<abbr>HTML</abbr> with 'Other' documents
+                        <br><span class="govuk-!-font-size-16">If a case (which will be legacy/closed cases) has any documents uploaded via the previous 'Other' option - which are NOT images - then we simply list them in their own section at the foot of the page. Their hyperlinks are direct downloads - as currently demonstrated in current fuctionality - (but note 'download' attribute on this prototype). No need for a quanity count in the header, an 'Add' link, or a link in the left-nav, this is to service old cases.
+                    </li>                     
+                    <li class="govuk-!-font-size-16">
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/supporting-information-empty.html" target="_blank">Case page - Supporting information blank</a> - shows the page/<abbr>HTML</abbr> without any information
                     </li>                    
                     <li class="govuk-!-font-size-16">
@@ -437,8 +441,15 @@
 
         <ol class="govuk-list govuk-list--number govuk-list--spaced">
             <li>
-                <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/case-page-closed" target="_blank">Case page closed</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-page-closed" target="_blank">Case page closed</a>
                 <br><span class="govuk-!-font-size-16">A version showing a closed case with a timestamped product. <br>(You can only view a timestamped product record via a case page)</span>.
+                <br><span class="govuk-!-font-size-16">All edit (add/edit/change/set, etc) options removed through the entire case (including supporting pages - not exampled in this prototype), except for the two 'Re-open' links on the case landing page. If a case is closed, the status row uses a black tag highlight block to display 'Case closed'. The date the case was closed is shown next to the black tag (we record the date cases are closed). "Add a product to the case" and all equivalent links (top right, on all the related case pages) are removed. The statement below the main H1 title is changed to "This case is closed". 
+                    <br><br>  
+                    The product record included is now a "timestamped" version and so no edit links or links to the full product page are included (which is demonstrated via the Products link). The <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-timestamped" target="_blank">Products page now uses an alternative text</a> with the <abbr>PSD</abbr> reference number and a new <abbr>PSD</abbr> ref number, which here appends a "now" timestamp (as like the javascript funciton date.now) to give the record a unique reference. (The case closed date is included in this text). Opening and closing the case does not update the product record - it can't change - only a different product record that might have been added while the case was re-opened can be affected. No edits of any kind can now be made to this timestamped version of the product record and it can never be removed from the case, even if the case is re-opened (so the remove product link is also removed). This product record, by default, will not be included in other cases, so the Cases tab is set to (0) and it will be empty. The entire row (with updated date and image) below the H3 product title) is removed. 
+
+                    <br><br>  <strong>Important:</strong> the links linking to supporting information go to the relevant page to display the full details but these destination pages for <b>closed</b> cases must also hide the "Edit" (or similar) links. This is also true for the Businesses destination pages (and on the new case Businesses page itself we change the link text of "To view and edit all the details ..." to "To view all the details..." ).
+
+                </span>
             </li>
         </ol>        
 
@@ -454,8 +465,8 @@
                 <br><span class="govuk-!-font-size-16">Showing a case with 3 products (all with a different ownership status)</span>.
             </li> 
             <li>
-                <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/products-2-products-safe" target="_blank">Case - products page - safe</a>
-                <br><span class="govuk-!-font-size-16">Example showing that this case has defined the included product record as safe and compliant</span>.
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-safe" target="_blank">Case - products page - safe</a>
+                <br><span class="govuk-!-font-size-16">Example showing that this case has defined the included product record(s) as safe and compliant. There is a simple inset text (statement) at the top of the main section</span>.
             </li>  
             <li>
                 Note: during this work we will also need to add a 'Create a product record' link to the 3x Products pages (Your, Team, Search).
@@ -479,7 +490,7 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/add-a-product" target="_blank">
                     Case - product page - add a product
                 </a>
-                <br><span class="govuk-!-font-size-16">Use a <abbr>PSD</abbr> product record code to add it to the case</span>.
+                <br><span class="govuk-!-font-size-16">Use a <abbr>PSD</abbr> product record code to add it to the case. Users can not add the same product record to a case more than once at any one time. Error message: This product record has already been added to the case </span>
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/is-this-the-product" target="_blank">
@@ -711,6 +722,7 @@
             </ul>
 
             <p class="govuk-body">The "Edit this product" link(s) only appear if the user is in the product record owner team or the product record has no owner.</p>
+
             <p class="govuk-body">Within the tabbed areas, the statements "To edit the [details/images/attachments] for this product go to the full [product name] product record page" only appear if the user is in the product record owner team or the product record has no owner. Alternatively, we serve this statement instead: "Only the product record owner ([Owner name]) can edit these [details/images/attachments]".</p>
         </div>
 
